--- a/Report.tex
+++ b/Report.tex
@@ -5,7 +5,9 @@
 \usepackage{natbib}
 
 
-\title{A distributional analysis of affixal rivalry between \emph{-ed} and \emph{-y} in English}
+\title{A distributional analysis 
+
+of affixal rivalry between \emph{-ed} and \emph{-y} in English}
 \author{Ngo Trung Hieu & Zheng Peng \thanks{M1 Linguistique Informatique - Université Paris Cité}}
 \bibliographystyle{plainnat}
 \date{}
@@ -13,6 +15,23 @@
 \begin{document}
 \maketitle
 
+\begin{abstract}
+    Let's put something in here for the abstract.
+\end{abstract}
+
+\section{Literature review}
+
+
+\section{Research questions}
+
+\section{Methodology and Experiment design}
+
+
+\section{Results}
+
+\section{Discussion}
+
+\section{Conclusion}    
 
 
 \bibliography{biblio}
