--- a/Report.tex
+++ b/Report.tex
@@ -26,10 +26,12 @@ of affixal rivalry between \emph{-ed} and \emph{-y} in English}
 
 \subsection{Distributional methodology for affixal rivalry}
 
+\subsection{Semantic retrofitting for word embeddings}
+
 \section{Research questions}
-    Because Nagano (2022) explained the affixal rivalry between \emph{-ed} and \emph{-y} in English from a purely semantic perspective, therefore, the dataset used in that paper is very limited. We are interested in investigating this finding from a distributional perspective. Therefore, the research questions of this study are as follows:
+    Because Nagano (2022) explained the affixal rivalry between \emph{-ed} and \emph{-y} in English from a purely semantic perspective, her experiments were qualitative, and therefore, the dataset used in the paper is very limited. We are interested in investigating this finding from a distributional perspective. Therefore, the research questions of this study are as follows:
     \begin{itemize}
-        \item Is there similarity between the affixes \emph{-ed} and \emph{-y} in terms of their distributional behavior? To answer this question, this study will look at the distributional representations of the two affixes, by using conventional word embeddings such as word2vec.
+        \item Is there similarity between the affixes \emph{-ed} and \emph{-y} in terms of their distributional behavior? To answer this question, this study will look at the distributional representations of the two affixes, by using conventional distributional word embeddings such as word2vec.
         \item Are there evidence of affixal rivalry between \emph{-ed} and \emph{-y} in English, in a larger and not hand-picked dataset? To answer this question, this study will train a neural network on the dataset from Nagano (2022), and test the classifier on unseen data extracted from UniMorph. If there exists a rivalry between the two affixes, the classifier should not be able to accurately predict the correct affix for the unseen data.
         \item The conventional distributional representations of words may not be able to capture sematic relationships between words. Therefore, this study will also implement a retrofitting algorithm from Faruqui (2015) to augment the word embeddings. If the similarity between the two affixes is increased after retrofitting, it means that there exists a semantic relationship between the two affixes.
     \end{itemize}
@@ -37,7 +39,7 @@ of affixal rivalry between \emph{-ed} and \emph{-y} in English}
 \section{Methodology and Experiment design}
 There are three experiments in this project. To answer the first research question, we calculate and compare the difference vectors between the two affixes to see if they are semantically comparable or not. The second experiment is to train a neural network classifier on these difference vectors, then test the classifier on unseen data, in this case the data from UniMorph. The last question augmenting the semantics of the word embeddings using the semantic retrofitting method will be addressed in the third experiment.
 
-\subsection*{Experiment 1:}
+\subsection{Experiment 1:}
     For this experiment, the dataset from Nagano (2022) and a distributional word vectorization system are needed. The idea is to represent the roots of chosen words and their derivations in a vector space, so that we can use computation to calculate the similarity. The chosen vector space is the Google-News-300 dataset from word2vec model, which is accessible from the Gensim package. This vector space is created from a vocabulary of 3 million words from Google News, and each word is represented by a 300-dimensional vector. The dataset from Nagano (2022) is a hand-picked dataset of 38 words, which have both \emph{-ed} and \emph{-y} derivations. The roots of these words are concrete nouns, and the derivations are adjectives, so the process is denominalization. The difference vectors between the roots and the derivations are calculated by subtraction, and the average difference vectors of the two affixes are compared using cosine similarity. If the two affixes are distributionally similar, the difference vectors should be similar as well.
 
 \subsection{Experiment 2:}
@@ -54,7 +56,7 @@ There are three experiments in this project. To answer the first research questi
     \subsection{Experiment 1:}
     Using the word2vec model, we first calculate the average similarity between two random words in the lexicon. To do this, we randomly chose 100,000 pairs from the lexicon, and compute the cosine similarity between the pairs. The result of this computation is 0.1308, and this serves as a baseline for the cosine similarity results. 
 
-    The next step is to calculate the average difference vectors between the roots and the derivations of the Nagano dataset. The vectorization model is used on both the roots and the derivations of the words in the Nagano dataset, and then the difference vector is calculated as \text{difference vector} = \text{root vector} - \text{derivation vector}. The difference vectors between each root and its two derivations are then compared using cosine similarity, then these values were used to calculate the average similarity between the two affixes \emph{-ed} and \emph{-y}. The result of this computation is 0.4162, which is 3.18 times higher than the baseline. This result shows that the two affixes are distributionally similar. The detailed result of this experiment is shown in the attached Jupyter notebook.
+    The next step is to calculate the average difference vectors between the roots and the derivations of the Nagano dataset. The vectorization model is used on both the roots and the derivations of the words in the Nagano dataset, and then the difference vector is calculated as $\text{difference vector}$ = $\text{root vector}$ - $\text{derivation vector}$. The difference vectors between each root and its two derivations are then compared using cosine similarity, then these values were used to calculate the average similarity between the two affixes \emph{-ed} and \emph{-y}. The result of this computation is 0.4162, which is 3.18 times higher than the baseline. This result shows that the two affixes are distributionally similar. The detailed result of this experiment is shown in the attached Jupyter notebook.
 
     \subsection{Experiment 2:}
     First, the test data was extracted from the UniMorph database, only finding the denominalized adjectives ending in \emph{-ed} and \emph{-y}. This results in a list of 4191 words, with 42.92\% ending in \emph{-ed} and 57.08\% ending in \emph{-y}. 
@@ -64,13 +66,21 @@ There are three experiments in this project. To answer the first research questi
     The classifier was then trained on the Nagano dataset of 76 examples. The classifier was trained for 100 epochs, using 10 folds to maximize learning efficiency. When tested on the test dataset from UniMorph, the classifer gave an accuracy of 49.146\%, which is slightly lower than the expected result of 50\%. This result shows that the classifier trained on the difference vectors of \emph{-ed} and \emph{-y} is not able to distinguish between the two affixes, and therefore distributionally, there exists an affixal rivalry between these two affixes. The detailed result of this experiment is shown in the attached Jupyter notebook. However, this result is still lower than the most frequent class of 57.08\%, so there might be room to improve. 
 
     \subsection{Experiment 3:}
-    For the last experiment, we wanted to retrofit the word vectors to see if there are semantic similarity between \emph{-ed} and \emph{-y} or not. 
+    For the last experiment, we wanted to semantically retrofit the word vectors to see if there is semantic similarity between \emph{-ed} and \emph{-y} or not. A lexicon created from WordNet was used to provide the semantic information for the words. The retrofitting method from Faruqui et al. (2015) was used to create a new word vector based on the old word vector and the semantic information from the lexicon. The new word vector is calculated as follows: $\text{new word vector}$ = $\alpha$ * $\text{old word vector}$ + $\sum_{i=1}^{d_i}$ $\frac{1}{d_i}$ * ($\text{neighbor vectors})$, where $\alpha$ is a hyperparameter and $d_i$ is the number of neighbors of the word. The value of $\alpha$ is set to 1. This algorithm allows the new word vector to not only be similar to the old word vector, but also more similar to the semantically related neighbors of the word.
 
+    The retrofitting method was applied to the word vectors of the Nagano dataset, and then the difference vectors were recalculated. The average similarity between the two affixes was then calculated again, and the result is 0.495. Compared to the original vectors, the average similarity was increased only by a small amount of 0.0788, but it is still 3.19 times higher than the baseline. This modest gain was due to the fact that some of the similarities of the word vectors and their derivations were increased substantially,, such as \emph{bone} from 0.602 to 0.998 or \emph{curve} from 0.628 to 0.997, a few others were decreased. However, overall, the average similarity was increased, which shows that the two affixes are semantically similar. The detailed result of this experiment is shown in the attached Jupyter notebook.
 
 \section{Discussion}
-
+    The results of the three experiments show that there exists both distributional and semantic similarity between the two affixes \emph{-ed} and \emph{-y}. However, the accuracy of the second experiment is still much lower than the baseline of predicting the most frequent affix, which is 57.08\%. We looked at this problem from a few other perspectives:
+    \begin{itemize}
+        \item The classifier might be learning too much unnecessary details from the train set due to the power of neural network, therefore cannot generalize well to the test set. To solve this problem, we implemented an early stopping mechanism to stop the training process when the test accuracy stops improving. With the early stopping mechanism implemented, the classifier had the accuracy for the train set at 100\% in just one epoch, and the training was stopped because the accuracy for the test set was decreased in the next epoch. The accuracy for the test set was 56.662\%, which is much higher than the previous result but still a little lower than the most frequent baseline. This result showed that the classifier is indeed learning too much unnecessary details from the train set, and the early stopping mechanism is able to solve this problem. 
+        \item The training set might be too small for the classifier to learn the difference between the two affixes. To solve this problem, we reversed the train set and test set, so that the train set is substantially larger than the test set. After the reversal, the accuracy of the prediction on the Nagano set was at exactly 50\%, which is the baseline for this dataset. This result showed that the datasets were not the problem. 
+        \item The train set and the test set might be too different from each other for the classifier to work, or the classifier is not efficient enough to capture information. To check this issue, we implemented the classifier on another task of predicting if a word is in singular or plural form. The data was extracted from UniMorph, and splitted into a train and test set with the ratio of 80:20. After training, the classifier achieved an accuracy score of 45.45\% on the test set, which is a little lower than the baseline of 50\%. This result showed that the classifier is not efficient enough to capture information, and the train set and test set are not too different from each other.
+        
+    \end{itemize}
+    After looking closer into the problem from other perspectives, all of the above are not the case. From this, we can conclude that there is indeed affixal rivalry between \emph{-ed} and \emph{-y}, and the two affixes are also semantically similar.
 \section{Conclusion}    
-
+    This study attempted to distributionally prove the findings from Nagano's paper in 2022, that there exists a semantically affixal rivalry between the affixes \emph{-ed} and \emph{-y}. The distributional difference vectors of the two affixal process are cosine similar, and retrofitting these vectors with semantic information managed to improve the similarity, therefore the two process are semantically similar. The neural network classifier managed to achieve an accuracy of 56.662\% on the UniMorph dataset, which translates to the fact that a classifier cannot distinguish between the two affixes, and therefore there exists an affixal rivalry between the two affixes. From these experiments, we can conclude the findinds of Nagano in 2022, that indeed there exists a semantically affixal rivalry between the affixes \emph{-ed} and \emph{-y}. 
 \nocite{*}
 \bibliography{biblio}
 
