minor tweaks in methodology

--- a/Report.tex
+++ b/Report.tex
@@ -39,10 +39,10 @@ of affixal rivalry between \emph{-ed} and \emph{-y} in English}
 There are three experiments in this project. To answer the first research question, we calculated and compared the difference vectors between the two affixes to see if they are semantically comparable or not. The second experiment is to train a neural network classifier on these difference vectors, then test the classifier on unseen data, in this case, the data from UniMorph. The last question of augmenting the semantics of the word vectors using the semantic retrofitting method was addressed in the third experiment.
 
 \subsection{Experiment 1:}
-    For this experiment, the dataset from Nagano (2022) and a distributional word vectorization system are needed. The idea is to represent the roots of chosen words and their derivations in a vector space so that we can use computation to calculate the similarity. The chosen vector space is the Google-News-300 dataset from word2vec model, which is accessible from the Gensim package. This vector space is created from a vocabulary of 3 million words from Google News, and each word is represented by a 300-dimensional vector. The dataset from Nagano (2022) is a hand-picked dataset of 38 words, which have both \emph{-ed} and \emph{-y} derivations. The roots of these words are concrete nouns, and the derivations are adjectives, so the process is denominalization. The difference vectors between the roots and the derivations are calculated by subtraction, and the average difference vectors of the two affixes are compared using cosine similarity. If the two affixes are distributionally similar, the difference vectors should be similar as well.
+    For this experiment, the dataset from Nagano (2022) and a distributional word vectorization system are needed. The idea is to represent the roots of chosen words and their derivations in a vector space so that we can use computation to calculate the similarity. The two affixal processes are seen as semantically comparable if the distributional vectors of the processes are cosine similar. Because cosine similarity is in the range of [-1, 1] with -1 as totally different and 1 as totally similar, we believe that a similarity of around 0.5 would suffice to prove that the two affixal processes are semantically similar. The 76 examples given by Nagano are first converted to vectors by using the Google News 300 pre-trained Word2Vec model. Then the difference vectors are calculated using the roots and their derivations. Finally, the difference vectors of the two affixal processes are averaged, then compared to each other using cosine similarity. If the two affixes are distributionally similar, the difference vectors should be similar as well.
 
 \subsection{Experiment 2:}
-    For the second experiment, we will create a neural network classifier with one hidden layer to train on the Nagano dataset, then use the classifier to predict the derivation of the unseen root words during training. The test dataset is extracted from UniMorph, and the words are filtered to only include words that can have \emph{-ed} or \emph{-y} affixes. The classifier will be trained on the vectorized roots and their derivations from the Nagano dataset, and the classifier will be trained for 100 epochs using 10 folds to maximize learning efficiency due to the limited number of training examples. After training, the classifier will be tested on the UniMorph dataset of 4191 words, which were then vectorized by the word2vec model. The ratio of \emph{-ed} affix is 42.92\%, while the ratio of \emph{-y} affix is 57.08\%. The classifier will be tested on this UniMorph dataset, and the accuracy will be calculated. If the classifier can predict the derivation of the unseen words with an accuracy of around 50\%, it means that the classifier is not able to distinguish between the two affixes, and therefore there exists an affixal rivalry between the two affixes.
+    For the second experiment, we will create a neural network classifier with one hidden layer to train on the Nagano dataset, then use the classifier to predict the derivation of the unseen root words during training. The training data from Nagano is converted into a set of roots and labels. The roots are labeled \emph{0} if having a \emph{ed} derivation, and \emph{1} if \emph{-y}. The roots are then vectorized, then the training data is fed into the classifier. The test dataset is extracted from UniMorph, and the words are filtered to only include words that can have \emph{-ed} or \emph{-y} affixes. The classifier will be trained on the vectorized roots and their derivations from the Nagano dataset, and the classifier will be trained for 100 epochs using 10 folds to maximize learning efficiency due to the limited number of training examples. After training, the classifier will be tested on the UniMorph dataset of 4191 words, which were then vectorized by the word2vec model. The ratio of \emph{-ed} affix is 42.92\%, while the ratio of \emph{-y} affix is 57.08\%. The classifier will be tested on this UniMorph dataset. The hypothesis is if the classifier can predict the derivation of the unseen words with an accuracy of around 50\%, it means that the classifier is not able to distinguish between the two affixes, and therefore there exists an affixal rivalry between the two affixes.
 
 \subsection{Experiment 3:}
     Semantic retrofitting is a method to improve the quality of the word vectors by using the semantic information (synonyms, antonyms, hyper/hyponyms) from a lexicon. 
